--- a/README
+++ b/README
@@ -22,7 +22,7 @@ The project serves as a image search-engine where users can search images via [u
 
 ** Demo
 
-<img src='./demo.png>
+<img src='./demo.png'>
 
 
 
